[metadata]
name = pewee
description = Pack required DLLs into wheels
license= BSD-3-Clause
author = Blair Noctis
author-email = code@noctis.im
home-page = https://github.com/bnoctis/pewee
keywords =
	wheel
	packaging
	windows
classifier = 
	License :: OSI Approved :: BSD License
	Development Status :: 2 - Pre-Alpha
	Environment :: Win32 (MS Windows)
	Environment :: Console
	Intended Audience :: Developers
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Topic :: Software Development :: Build Tools
	Topic :: Software Development :: Libraries :: Python Modules

[files]
packages = pewee
