[metadata]
name = pewee
version = 0.1.0
description = Pack required DLLs into wheels
license= BSD-3-Clause
author = Blair Noctis
author_email = code@noctis.im
home_page = https://github.com/bnoctis/pewee
keywords =
	wheel
	packaging
	windows
classifier = 
	License :: OSI Approved :: BSD License
	Development Status :: 2 - Pre-Alpha
	Environment :: Win32 (MS Windows)
	Environment :: Console
	Intended Audience :: Developers
	Operating System :: OS Independent
	Programming Language :: Python :: 3
	Topic :: Software Development :: Build Tools
	Topic :: Software Development :: Libraries :: Python Modules

[files]
packages = pewee

[options.extras_require]
cli = click==8.1.2; prettytable==3.2.0

[options.entry_points]
console_scripts = 
	pewee = pewee.cli:cli [cli]
